--- a/ui/reuse/client/src/components/searchBoxInMenu/searchBoxInMenu.scss
+++ b/ui/reuse/client/src/components/searchBoxInMenu/searchBoxInMenu.scss
@@ -1,9 +1,6 @@
 @import "../../assets/css/qbVariables";
 
 .searchBoxInMenu {
-
-    margin: $spacing-tiny;
-
     .form-control {
         border-color: $color-black-300;
 
